--- a/videoJS_Ted.html
+++ b/videoJS_Ted.html
@@ -2,7 +2,7 @@
 <head>
 <link href="//vjs.zencdn.net/7.3.0/video-js.min.css" rel="stylesheet">
 <script src="//vjs.zencdn.net/7.3.0/video.min.js"></script>
-<script src="videojs-contrib-hls.min.js"></script>
+<script src="videojs-http-streaming.min.js"></script>
 
 </head>
 
