first videojs page

--- a/videoJS_Ted.html
+++ b/videoJS_Ted.html
@@ -15,6 +15,7 @@
     preload="auto"
     autoplay="true"
     muted="true"
+    width="1000"
     data-setup='{}'>
     <source
      src="tedmanifest.m3u8"
