first videojs page

--- a/videoJS_Ted.html
+++ b/videoJS_Ted.html
@@ -16,8 +16,10 @@
     autoplay="true"
     muted="true"
     width="1000"
-    data-setup='{}'
-    src="tedmanifest.m3u8">
+    data-setup='{}'>
+    <source
+     src="tedmanifest.m3u8"
+     type="application/x-mpegURL">
   <p class="vjs-no-js">
     To view this video please enable JavaScript, and consider upgrading to a
     web browser that
