--- a/videoJS_Ted.html
+++ b/videoJS_Ted.html
@@ -10,23 +10,15 @@
 
 <video
     id="my-player"
-    class="video-js"
+    class="video-js vjs-default-skin"
     controls
     preload="auto"
     autoplay="true"
     muted="true"
-    width="1000"
-    data-setup='{}'>
+    width="1000">
     <source
      src="tedmanifest.m3u8"
      type="application/x-mpegURL">
-  <p class="vjs-no-js">
-    To view this video please enable JavaScript, and consider upgrading to a
-    web browser that
-    <a href="https://videojs.com/html5-video-support/" target="_blank">
-      supports HTML5 video
-    </a>
-  </p>
 </video>
 <script>
 var player = videojs('my-player');
