--- a/videoJS_Ted.html
+++ b/videoJS_Ted.html
@@ -2,7 +2,6 @@
 <head>
 <link href="//vjs.zencdn.net/7.3.0/video-js.min.css" rel="stylesheet">
 <script src="//vjs.zencdn.net/7.3.0/video.min.js"></script>
-<script src="videojs-http-streaming.min.js"></script>
 
 </head>
 
@@ -10,7 +9,7 @@
 
 <video
     id="my-player"
-    class="video-js vjs-default-skin"
+    class="vjs-default-skin"
     controls
     preload="auto"
     autoplay="true"
