first videojs page

--- a/videoJS_Ted.html
+++ b/videoJS_Ted.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<video
+<video-js
     id="my-player"
     class="vjs-default-skin"
     controls
@@ -15,7 +15,7 @@
     <source
      src="tedmanifest.m3u8"
      type="application/x-mpegURL">
-</video>
+</video-js>
 <script>
 var player = videojs('my-player');
 player.play();
