--- a/videoJS_Ted.html
+++ b/videoJS_Ted.html
@@ -7,19 +7,14 @@
 
 <body>
 
-<video-js
-    id="my-player"
-    class="vjs-default-skin"
-    controls
-    width="1000">
-    <source
-     src="tedmanifest.m3u8"
-     type="application/x-mpegURL">
-</video-js>
-<script>
-var player = videojs('my-player');
-</script>
+  <video-js id="my_video_1" class="vjs-default-skin" controls preload="auto" width="640" height="268">
+    <source src="https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8" type="application/x-mpegURL">
+  </video-js>
+  
 
+  <script>
+    var player = videojs('my_video_1');
+  </script>
 
 </body>
 
