--- a/videoJS_Campus.html
+++ b/videoJS_Campus.html
@@ -7,7 +7,7 @@
 
 <body>
 
-  <video-js id="my_video_1" class="vjs-default-skin" controls preload="auto" autoplay muted loop width="1000">
+  <video-js id="my_video_1" class="vjs-default-skin" controls preload="auto" autoplay muted loop playsinline width="1000">
     <source src="https://res.cloudinary.com/dougsillars/video/upload/v1543082006/Campus_mfkz6z.m3u8" type="application/x-mpegURL">
   </video-js>
   
