--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -1,5 +1,7 @@
 <html>
-<head><script src="https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.9/mediaelement.min.js"></script>
+<head>
+
+<script src="https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/mediaelement-and-player.min.js"></script>
 </head>
 <body>
 <!-- https://github.com/mediaelement/mediaelement/blob/master/docs/usage.md -->
