--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 <!-- https://github.com/mediaelement/mediaelement/blob/master/docs/usage.md -->
-<video src="https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8" width="1000" autoplay muted loop
+<video src="https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8" 
+		width="1000" controls autoplay muted loop
 		class="mejs__player">
 </video>
 
