--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -22,6 +22,7 @@
 	// is available in the `success` callback
 		success: function(mediaElement, originalNode, instance) {
 			// do things
+			player.load();
 		}
 	});
 </script>
