--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -22,7 +22,7 @@
 	// is available in the `success` callback
 		success: function(mediaElement, originalNode, instance) {
 			// do things
-			player.load();
+			player.play();
 		}
 	});
 </script>
