--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -22,6 +22,7 @@
 	// is available in the `success` callback
 		success: function(mediaElement, originalNode, instance) {
 			// do things
+			player.setSrc('https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8');
 			player.play();
 		}
 	});
