--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -8,7 +8,8 @@
 <video src="https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8" 
 		crossorigin
 		width="1000" controls autoplay muted loop
-		class="mejs__player">
+		class="mejs__player"
+		data-mejsoptions='{"pluginPath": "/path/to/shims/", "alwaysShowControls": "true"}'>
 </video>
 
 
