--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -18,7 +18,7 @@
 	// You can use either a string for the player ID (i.e., `player`), 
 	// or `document.querySelector()` for any selector
 	var player = new MediaElementPlayer('mejs__player', {
-		pluginPath: "/path/to/shims/",
+		//pluginPath: "/path/to/shims/",
 	// When using `MediaElementPlayer`, an `instance` argument
 	// is available in the `success` callback
 		success: function(mediaElement, originalNode, instance) {
