--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -8,7 +8,7 @@
 <video src="https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8" 
 		crossorigin
 		width="1000" controls autoplay muted loop
-		class="mejs__player"
+		class="player"
 		>
 </video>
 
@@ -17,7 +17,7 @@
 <script>
 	// You can use either a string for the player ID (i.e., `player`), 
 	// or `document.querySelector()` for any selector
-	var player = new MediaElementPlayer('mejs__player', {
+	var player = new MediaElementPlayer('player', {
 		//pluginPath: "/path/to/shims/",
 	// When using `MediaElementPlayer`, an `instance` argument
 	// is available in the `success` callback
