--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -23,9 +23,11 @@
 	// is available in the `success` callback
 		success: function(mediaElement, originalNode, instance) {
 			// do things
-			player.play();
+			console.log("Player initialised");
+			
 		}
 	});
+	player.play();
 </script>
 
 
