--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <!-- https://github.com/mediaelement/mediaelement/blob/master/docs/usage.md -->
-<video src="https://res.cloudinary.com/dougsillars/video/upload/v1543082006/Campus_mfkz6z.m3u8"  type="application/x-mpegURL" 
+<video src="https://res.cloudinary.com/dougsillars/video/upload/v1543082006/Campus_mfkz6z.m3u8" 
 		crossorigin
 		width="1000" controls autoplay muted loop
 		class="mejs__player"
@@ -23,11 +23,11 @@
 	// is available in the `success` callback
 		success: function(mediaElement, originalNode, instance) {
 			// do things
-			console.log("Player initialised");
-			
+			console.log("initialized");
+			player.play();
+			console.log("paying");
 		}
 	});
-	player.play();
 </script>
 
 
