--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -21,6 +21,7 @@
 		//pluginPath: "/path/to/shims/",
 	// When using `MediaElementPlayer`, an `instance` argument
 	// is available in the `success` callback
+	console.log("dfsdfdsa");
 		success: function(mediaElement, originalNode, instance) {
 			// do things
 			console.log("initialized");
