--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -17,16 +17,15 @@
 <script>
 	// You can use either a string for the player ID (i.e., `player`), 
 	// or `document.querySelector()` for any selector
+	console.log("script");
 	var player = new MediaElementPlayer('mejs__player', {
 		//pluginPath: "/path/to/shims/",
 	// When using `MediaElementPlayer`, an `instance` argument
 	// is available in the `success` callback
-	console.log("dfsdfdsa");
+	
 		success: function(mediaElement, originalNode, instance) {
 			// do things
-			console.log("initialized");
-			player.play();
-			console.log("paying");
+			
 		}
 	});
 </script>
