--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -21,7 +21,7 @@
 	// or `document.querySelector()` for any selector
 	console.log("script");
 	var player = new MediaElementPlayer('mejs__player', {
-		//pluginPath: "/path/to/shims/",
+		pluginPath: 'https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/',
 	// When using `MediaElementPlayer`, an `instance` argument
 	// is available in the `success` callback
 	
