--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 <!-- https://github.com/mediaelement/mediaelement/blob/master/docs/usage.md -->
-<video src="https://res.cloudinary.com/dougsillars/video/upload/v1543082006/Campus_mfkz6z.m3u8" type="application/x-mpegURL"
+<video
 		crossorigin
 		width="1000" controls autoplay muted loop
-		class="mejs__player"
-		>
+		class="mejs__player">
+		<source src="https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8" type="application/x-mpegURL">
 </video>
 
 
