--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -27,10 +27,11 @@
 	
 		success: function(mediaElement, originalNode) {
 			// do things
-		
+			console.log("Player initialised");
 			
 		}
 	});
+	player.setSrc("//www.streambox.fr/playlists/test_001/stream.m3u8");
 </script>
 
 
