--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -31,7 +31,7 @@
 			
 		}
 	});
-	player.setSrc("//www.streambox.fr/playlists/test_001/stream.m3u8");
+	player.setSrc("https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8");
 </script>
 
 
