--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -2,15 +2,14 @@
 <head>
 
 <script src="https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/mediaelement-and-player.min.js"></script>
-        <!-- library -->
-        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/mediaelementplayer.min.css">
+<!-- library -->
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/mediaelementplayer.min.css">
 </head>
 <body>
 <!-- https://github.com/mediaelement/mediaelement/blob/master/docs/usage.md -->
-<video
-		crossorigin
-		width="1000" controls autoplay muted loop
-		class="videoplayer">
+<video crossorigin width="320" height="240"
+		class="mejs__player"
+		data-mejsoptions='{"pluginPath": "https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/", "alwaysShowControls": "true"}'>
 		<source src="https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8" type="application/x-mpegURL">
 </video>
 
@@ -19,19 +18,14 @@
 <script>
 	// You can use either a string for the player ID (i.e., `player`), 
 	// or `document.querySelector()` for any selector
-	console.log("script");
-	var player = new MediaElementPlayer('videoplayer', {
-		pluginPath: 'https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/',
+	var player = new MediaElementPlayer('player', {
+		pluginPath: "https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/",
 	// When using `MediaElementPlayer`, an `instance` argument
 	// is available in the `success` callback
-	
-		success: function(mediaElement, originalNode) {
+		success: function(mediaElement, originalNode, instance) {
 			// do things
-			
-			
 		}
 	});
-	player.setSrc("https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8");
 </script>
 
 
