--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -9,8 +9,8 @@
 <!-- https://github.com/mediaelement/mediaelement/blob/master/docs/usage.md -->
 <video crossorigin width="320" height="240"
 		class="mejs__player"
-		data-mejsoptions='{"pluginPath": "https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/", "alwaysShowControls": "true"}'>
-		<source src="https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8" type="application/x-mpegURL">
+		data-mejsoptions='{"pluginPath": "https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/", "alwaysShowControls": "true"}'
+		src="https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8" type="application/x-mpegURL">
 </video>
 
 
