--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -10,7 +10,7 @@
 <video crossorigin width="320" height="240"
 		class="mejs__player"
 		data-mejsoptions='{"pluginPath": "https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/", "alwaysShowControls": "true"}'
-		src="https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8" type="application/x-mpegURL">
+		src="https://res.cloudinary.com//dougsillars/video/upload/c_limit,w_1280,h_720,vc_h264:main:3.1,br_5500k/v1543082006/Campus_mfkz6z.m3u8" type="application/x-mpegURL">
 </video>
 
 
