--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <!-- https://github.com/mediaelement/mediaelement/blob/master/docs/usage.md -->
-<video crossorigin width="320" height="240"
-		class="mejs__player"
+<video crossorigin width="1000" 
+		
 		controls
 		autoplay
 		muted
