--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 <!-- https://github.com/mediaelement/mediaelement/blob/master/docs/usage.md -->
-<video crossorigin width="1000" 
-		
+<video crossorigin 
+		width="1000" 
+		class="mejs__player"
 		controls
 		autoplay
 		muted
