--- a/shakaJS_Campus.html
+++ b/shakaJS_Campus.html
@@ -64,7 +64,7 @@ document.addEventListener('DOMContentLoaded', initApp);
 		autoplay
 		muted
 		loop
-		src="https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8" type="application/x-mpegURL">
+		src="https://res.cloudinary.com/dougsillars/video/upload/v1543082006/Campus_mfkz6z.mp4" type="application/x-mpegURL">
 </video>
 
 
