--- a/shakaJS_Campus.html
+++ b/shakaJS_Campus.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/2.4.7/shaka-player.compiled.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/2.4.7/shaka-player.compiled.debug.js"></script>
 </head>
 <body>
 
