--- a/shakaJS_Campus.html
+++ b/shakaJS_Campus.html
@@ -10,6 +10,8 @@
 <script>
 	var manifestUri =
     'https://res.cloudinary.com/dougsillars/video/upload/v1543082006/Campus_mfkz6z.mp4';
+    
+    shaka.log.setLevel(shaka.log.Level.DEBUG);
 
 function initApp() {
   // Install built-in polyfills to patch browser incompatibilities.
