--- a/shakaJS_Campus.html
+++ b/shakaJS_Campus.html
@@ -33,18 +33,19 @@ function initPlayer() {
   var player = new shaka.Player(video);
 
   // Attach player to the window to make it easy to access in the JS console.
-  window.player = player;
-
+  //window.player = player;
+  player.attach(video);
+  player.load(manifestUri);
   // Listen for error events.
   player.addEventListener('error', onErrorEvent);
 
   // Try to load a manifest.
   // This is an asynchronous process.
-  player.load(manifestUri).then(function() {
+//  player.load(manifestUri).then(function() {
     // This runs if the asynchronous load is successful.
-    console.log('The video has now been loaded!');
-  }).catch(onError);  // onError is executed if the asynchronous load fails.
-}
+//    console.log('The video has now been loaded!');
+//  }).catch(onError);  // onError is executed if the asynchronous load fails.
+//}
 
 function onErrorEvent(event) {
   // Extract the shaka.util.Error object from the event.
