--- a/shakaJS_Campus.html
+++ b/shakaJS_Campus.html
@@ -44,8 +44,8 @@ function initPlayer() {
 //  player.load(manifestUri).then(function() {
     // This runs if the asynchronous load is successful.
 //    console.log('The video has now been loaded!');
-  }).catch(onError);  // onError is executed if the asynchronous load fails.
-//}
+  //}).catch(onError);  // onError is executed if the asynchronous load fails.
+}
 
 function onErrorEvent(event) {
   // Extract the shaka.util.Error object from the event.
