--- a/shakaJS_Campus.html
+++ b/shakaJS_Campus.html
@@ -12,7 +12,6 @@
     'https://res.cloudinary.com/dougsillars/video/upload/v1543082006/Campus_mfkz6z.mp4';
     
     shaka.log.setLevel(shaka.log.Level.DEBUG);
-
 function initApp() {
   // Install built-in polyfills to patch browser incompatibilities.
   shaka.polyfill.installAll();
@@ -33,9 +32,8 @@ function initPlayer() {
   var player = new shaka.Player(video);
 
   // Attach player to the window to make it easy to access in the JS console.
-  //window.player = player;
-  player.attach(video);
-  player.load(manifestUri);
+  window.player = player;
+
   // Listen for error events.
   player.addEventListener('error', onErrorEvent);
 
