--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -15,7 +15,8 @@
 		muted
 		loop
 		data-mejsoptions='{"pluginPath": "https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/", "alwaysShowControls": "true"}'
-		src="https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8" type="application/x-mpegURL">
+		>
+		<source src="https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8" type="application/x-mpegURL">
 </video>
 
 
