--- a/shakaJS_Campus.html
+++ b/shakaJS_Campus.html
@@ -2,6 +2,8 @@
 <head>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/2.4.7/shaka-player.compiled.debug.js"></script>
+<!-- MUX is required for playback of HLS-->
+<script defer src="mux.min.js"></script>
 </head>
 <body>
 
