--- a/shakaJS_Campus.html
+++ b/shakaJS_Campus.html
@@ -3,7 +3,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/2.4.7/shaka-player.compiled.debug.js"></script>
 <!-- MUX is required for playback of HLS-->
-<script defer src="mux.min.js"></script>
+<script defer src="mux.js"></script>
 </head>
 <body>
 
@@ -11,7 +11,7 @@
 
 <script>
 	var manifestUri =
-    'https://bitdash-a.akamaihd.net/content/MI201109210084_1/m3u8s/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.m3u8';
+    'https://res.cloudinary.com/dougsillars/video/upload/sp_full_hd/v1543082006/Campus_mfkz6z.m3u8';
     
     shaka.log.setLevel(shaka.log.Level.DEBUG);
 function initApp() {
