--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -2,7 +2,8 @@
 <head>
 
 <script src="https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/mediaelement-and-player.min.js"></script>
-
+<!-- MUX is required for playback of HLS-->
+<script defer src="mux.js"></script>
 <!-- library -->
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/mediaelementplayer.min.css">
 </head>
