--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -27,11 +27,17 @@
 	// You can use either a string for the player ID (i.e., `player`), 
 	// or `document.querySelector()` for any selector
 	var player = new MediaElementPlayer('mejs__player', {
+		 type: "video/m3u8", 
 		pluginPath: "https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/",
 	// When using `MediaElementPlayer`, an `instance` argument
 	// is available in the `success` callback
 		success: function(mediaElement, originalNode, instance) {
 			// do things
+			var sources = [ { src: "https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8", type: "application/x-mpegURL" } ];
+
+      	 mediaElement.setSrc(sources);
+       	mediaElement.load();
+       	mediaElement.play();
 		}
 	});
 </script>
