--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -8,10 +8,27 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/mediaelementplayer.min.css">
 </head>
 <body>
+
+
+<script>
+	// You can use either a string for the player ID (i.e., `player`), 
+	// or `document.querySelector()` for any selector
+	var player = new MediaElementPlayer('mejs__player', {
+	
+		pluginPath: "https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/",
+	// When using `MediaElementPlayer`, an `instance` argument
+	// is available in the `success` callback
+		success: function(mediaElement, originalNode, instance) {
+			// do things
+
+		}
+	});
+</script>
+
 <!-- https://github.com/mediaelement/mediaelement/blob/master/docs/usage.md -->
 <video crossorigin 
 		width="1000" 
-		id="mejs__player"
+		class="mejs__player"
 		controls
 		autoplay
 		muted
@@ -20,27 +37,6 @@
 		>
 		<source src="https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8" type="application/x-mpegURL">
 </video>
-
-
-
-<script>
-	// You can use either a string for the player ID (i.e., `player`), 
-	// or `document.querySelector()` for any selector
-	var player = new MediaElementPlayer('mejs__player', {
-		 type: "video/m3u8", 
-		pluginPath: "https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/",
-	// When using `MediaElementPlayer`, an `instance` argument
-	// is available in the `success` callback
-		success: function(mediaElement, originalNode, instance) {
-			// do things
-			var sources = [ { src: "https://res.cloudinary.com/dougsillars/video/upload/sp_hd/v1543082006/Campus_mfkz6z.m3u8", type: "application/x-mpegURL" } ];
-
-      	 mediaElement.setSrc(sources);
-       	mediaElement.load();
-       	mediaElement.play();
-		}
-	});
-</script>
 
 
 
