--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -10,7 +10,41 @@
 <body>
 
 
+<script>
+	// You can use either a string for the player ID (i.e., `player`), 
+	// or `document.querySelector()` for any selector
+	var player = new MediaElementPlayer('mejs__player', {
+	
+		pluginPath: "https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/",
+	// When using `MediaElementPlayer`, an `instance` argument
+	// is available in the `success` callback
+		hls: {
+		debug: true
+	},
+		success: function(mediaElement, originalNode, instance) {
+			// do things
+					if (Hls !== undefined) {
+			media.addEventListener(Hls.Events.MEDIA_ATTACHED, function () {
+				// All the code when this event is reached...
+				console.log('Media attached!');
+			});
 
+			// Manifest file was parsed, invoke loading method
+			media.addEventListener(Hls.Events.MANIFEST_PARSED, function () {
+				// All the code when this event is reached...
+				console.log('Manifest parsed!');
+
+			});
+
+			media.addEventListener(Hls.Events.FRAG_PARSING_METADATA, function (event, data) {
+				// All the code when this event is reached...
+				console.log(data);
+			});
+		}
+
+		}
+	});
+</script>
 
 <!-- https://github.com/mediaelement/mediaelement/blob/master/docs/usage.md -->
 <video crossorigin 
