--- a/mediaelementJS_Campus.html
+++ b/mediaelementJS_Campus.html
@@ -49,7 +49,7 @@
 <!-- https://github.com/mediaelement/mediaelement/blob/master/docs/usage.md -->
 <video crossorigin 
 		width="1000" 
-		class="mejs__player"
+		id="mejs__player"
 		controls
 		autoplay
 		muted
