--- a/hlsJS_Campus.html
+++ b/hlsJS_Campus.html
@@ -4,7 +4,7 @@
 <body>
 <!-- Or if you want a more recent canary version -->
 <!-- <script src="https://cdn.jsdelivr.net/npm/hls.js@canary"></script> -->
-<video id="video"controls preload="auto" autoplay muted loop playsinline width="100%"  ></video>
+<video id="video"controls preload="auto" autoplay muted loop playsinline width="720"  ></video>
 <script>
   var video = document.getElementById('video');
   if(Hls.isSupported()) {
