--- a/shakaJS_Campus.html
+++ b/shakaJS_Campus.html
@@ -61,7 +61,7 @@ document.addEventListener('DOMContentLoaded', initApp);
 </script>
 
 <video crossorigin 
-		width="100%" 
+		width="720" 
 		id="video"
 		controls
 		autoplay
