--- a/hlsJS_Campus1080.html
+++ b/hlsJS_Campus1080.html
@@ -1,5 +1,5 @@
 <html>
-<head><script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+<head><script src="hls.js"></script>
 </head>
 <body>
 <!-- Or if you want a more recent canary version -->
