--- a/videoJS_Campus360.html
+++ b/videoJS_Campus360.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<script src="//vjs.zencdn.net/7.3.0/video.min.js"></script>
+<script src="video.min.js"></script>
 
-<link href="//vjs.zencdn.net/7.3.0/video-js.min.css" rel="stylesheet">
+<link href="video-js.min.css" rel="stylesheet">
 
 
 </head>
