remove debugon shaka

--- a/shakaJS_BBB360.html
+++ b/shakaJS_BBB360.html
@@ -13,7 +13,7 @@
 	var manifestUri =
     'https://res.cloudinary.com/dougsillars/video/upload/sp_full_hd/v1518476665/bbb_38s_s0avek.m3u8';
     
-    shaka.log.setLevel(shaka.log.Level.DEBUG);
+   // shaka.log.setLevel(shaka.log.Level.DEBUG);
 function initApp() {
   // Install built-in polyfills to patch browser incompatibilities.
   shaka.polyfill.installAll();
