--- a/shakaJS_Campus360.html
+++ b/shakaJS_Campus360.html
@@ -13,7 +13,7 @@
 	var manifestUri =
     'https://res.cloudinary.com/dougsillars/video/upload/sp_full_hd/v1543082006/Campus_mfkz6z.m3u8';
     
-    shaka.log.setLevel(shaka.log.Level.DEBUG);
+ //   shaka.log.setLevel(shaka.log.Level.DEBUG);
 function initApp() {
   // Install built-in polyfills to patch browser incompatibilities.
   shaka.polyfill.installAll();
