--- a/shakaJS_Campus_pc.html
+++ b/shakaJS_Campus_pc.html
@@ -4,7 +4,7 @@
 <script src="shaka-player.compiled.js"></script>
 <!-- MUX is required for playback of HLS-->
 <script defer src="mux.js"></script>
-<link rel="rel='preconnect dns-prefetch' href="https://res.cloudinary.com">
+<link rel='preconnect dns-prefetch' href="https://res.cloudinary.com">
 </head>
 <body>
 
