--- a/hlsJS_Campuspc.html
+++ b/hlsJS_Campuspc.html
@@ -1,6 +1,9 @@
 <html>
-<head><script src="hls.js"></script>
+
+<head>
 <link rel='preconnect dns-prefetch' href="https://res.cloudinary.com" crosorigin>
+<script src="hls.js"></script>
+
 </head>
 <body>
 <!-- Or if you want a more recent canary version -->
