preconnect remove prefetch

--- a/shakaJS_Campus_pc.html
+++ b/shakaJS_Campus_pc.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel='preconnect dns-prefetch' href="https://res.cloudinary.com" crosorigin>
+<link rel='preconnect' href="https://res.cloudinary.com" crosorigin>
 <script src="shaka-player.compiled.js"></script>
 <!-- MUX is required for playback of HLS-->
 <script defer src="mux.js"></script>
