--- a/videoJS_Campuspc.html
+++ b/videoJS_Campuspc.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel='preconnect dns-prefetch' href="https://res.cloudinary.com" crosorigin>
+<link rel='preconnect' href="https://res.cloudinary.com" crosorigin>
 <script src="video.min.js"></script>
 
 <link href="video-js.min.css" rel="stylesheet">
