--- a/hlsJS_Campuspc.html
+++ b/hlsJS_Campuspc.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<link rel='preconnect' href="https://res.cloudinary.com" crosorigin>
+<link rel='preconnect' href="//res.cloudinary.com" crosorigin>
 <script src="hls.js"></script>
 
 </head>
