reorganizing JS in own folder

--- a/hlsJS_Campus.html
+++ b/hlsJS_Campus.html
@@ -1,5 +1,6 @@
 <html>
-<head><script src="hls.js"></script>
+<head>
+<script src="../js/hls.min.js"></script>
 </head>
 <body>
 <!-- Or if you want a more recent canary version -->
