--- a/shakaJS_Campus.html
+++ b/shakaJS_Campus.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-<script src="shaka-player.compiled.js"></script>
+<script src="../js/shaka-player.compiled.js"></script>
 <!-- MUX is required for playback of HLS-->
 <script defer src="mux.js"></script>
 </head>
