--- a/preconnect/hlsJS_Campuspc.html
+++ b/preconnect/hlsJS_Campuspc.html
@@ -2,7 +2,7 @@
 
 <head>
 <link rel='preconnect' href="//res.cloudinary.com" crosorigin>
-<script src="hls.js"></script>
+<script src="../js/hls.js"></script>
 
 </head>
 <body>
