--- a/preconnect/videoJS_Campuspc.html
+++ b/preconnect/videoJS_Campuspc.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 <link rel='preconnect' href="https://res.cloudinary.com" crosorigin>
-<script src="video.min.js"></script>
+<script src="../js/video.min.js"></script>
 
-<link href="video-js.min.css" rel="stylesheet">
+<link href="../js/video-js.min.css" rel="stylesheet">
 
 
 </head>
