--- a/altWidth/hlsJS_Campus360.html
+++ b/altWidth/hlsJS_Campus360.html
@@ -1,5 +1,5 @@
 <html>
-<head><script src="hls.js"></script>
+<head><script src="../js/hls.js"></script>
 </head>
 <body>
 <!-- Or if you want a more recent canary version -->
