--- a/altWidth/shakaJS_Campus1080.html
+++ b/altWidth/shakaJS_Campus1080.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 
-<script src="shaka-player.compiled.js"></script>
+<script src="../js/shaka-player.compiled.js"></script>
 <!-- MUX is required for playback of HLS-->
-<script defer src="mux.js"></script>
+<script defer src="../js/mux.js"></script>
 </head>
 <body>
 
