videoJS responsive test fixed

--- a/videoJS_param/videoJS_Campus720.html
+++ b/videoJS_param/videoJS_Campus720.html
@@ -24,7 +24,9 @@
   
 
   <script>
-    var player = videojs('my_video_1');
+    var player = videojs('my_video_1', {
+  		responsive: true
+	});
   </script>
 
 </body>
