--- a/videoJS_param/videoJS_Campus360.html
+++ b/videoJS_param/videoJS_Campus360.html
@@ -16,15 +16,15 @@
    loop
     playsinline
      width="360"
-     {
-  responsive: true
-	}); >
+     >
     <source src="https://res.cloudinary.com/dougsillars/video/upload/sp_full_hd/v1543082006/Campus_mfkz6z.m3u8" type="application/x-mpegURL">
   </video-js>
   
 
   <script>
-    var player = videojs('my_video_1');
+    var player = videojs('my_video_1', {
+  		responsive: true
+	});
   </script>
 
 </body>
