--- a/shakajs_param/shakaJS_Campus720.html
+++ b/shakajs_param/shakaJS_Campus720.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 
-<script src="js/shaka-player.compiled.js"></script>
+<script src="../js/shaka-player.compiled.js"></script>
 <!-- MUX is required for playback of HLS-->
-<script defer src="js/mux.js"></script>
+<script defer src="../js/mux.js"></script>
 </head>
 <body>
 
