--- a/preconnect/hlsJS_Campuspc.html
+++ b/preconnect/hlsJS_Campuspc.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<link rel='preconnect' href="//res.cloudinary.com" crosorigin>
+<link rel='preconnect dns-prefetch' href="res.cloudinary.com" crosorigin>
 <script src="../js/hls.js"></script>
 
 </head>
