--- a/preconnect/hlsJS_Campuspc.html
+++ b/preconnect/hlsJS_Campuspc.html
@@ -2,7 +2,7 @@
 
 <head>
 <link rel="preconnect dns-prefetch" href="res.cloudinary.com" crosorigin>
-<script defer src="../js/hls.js"></script>
+<script async src="../js/hls.js"></script>
 
 </head>
 <body>
