--- a/preconnect/hlsJS_Campuspc.html
+++ b/preconnect/hlsJS_Campuspc.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<link rel="preconnect dns-prefetch" href="res.cloudinary.com" crosorigin>
-<script async src="../js/hls.js"></script>
+<link rel="preconnect dns-prefetch" href="cloudinary.com" crosorigin>
+<script src="../js/hls.js"></script>
 
 </head>
 <body>
