--- a/preconnect/hlsJS_Campuspc.html
+++ b/preconnect/hlsJS_Campuspc.html
@@ -1,11 +1,12 @@
 <html>
 
 <head>
-<link rel="preconnect" href="res.cloudinary.com" crosorigin>
+
 <script src="../js/hls.js"></script>
 
 </head>
 <body>
+<link rel="preconnect dns-prefetch" href="res.cloudinary.com" crosorigin>
 <!-- Or if you want a more recent canary version -->
 <!-- <script src="https://cdn.jsdelivr.net/npm/hls.js@canary"></script> -->
 <video id="video"controls preload="auto" autoplay muted loop playsinline width="720"  ></video>
