--- a/preconnect/hlsJS_Campuspc.html
+++ b/preconnect/hlsJS_Campuspc.html
@@ -3,10 +3,10 @@
 <head>
 
 <script src="../js/hls.js"></script>
-
+<link rel="preconnect dns-prefetch" href="res.cloudinary.com">
 </head>
 <body>
-<link rel="preconnect dns-prefetch" href="res.cloudinary.com" crosorigin>
+
 <!-- Or if you want a more recent canary version -->
 <!-- <script src="https://cdn.jsdelivr.net/npm/hls.js@canary"></script> -->
 <video id="video"controls preload="auto" autoplay muted loop playsinline width="720"  ></video>
