--- a/preconnect/hlsJS_Campuspc.html
+++ b/preconnect/hlsJS_Campuspc.html
@@ -1,9 +1,9 @@
 <html>
 
 <head>
-
+<link href="https://res.cloudinary.com" rel="preconnect" crossorigin>
 <script src="../js/hls.js"></script>
-<link rel="preconnect dns-prefetch" href="res.cloudinary.com">
+
 </head>
 <body>
 
