--- a/preconnect/hlsJS_Campuspc.html
+++ b/preconnect/hlsJS_Campuspc.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<link href="https://res.cloudinary.com" rel="preconnect" crossorigin>
+<link href="https://res.cloudinary.com" rel="preconnect dns-prefetch" crossorigin>
 <script src="../js/hls.js"></script>
 
 </head>
