alt size VideoJS 2 more videos

--- a/preconnect/shakaJS_Campus_pc.html
+++ b/preconnect/shakaJS_Campus_pc.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel='preconnect' href="https://res.cloudinary.com" crosorigin>
+<link href="https://res.cloudinary.com" rel="preconnect dns-prefetch" crossorigin>
 <script src="../js/shaka-player.compiled.js"></script>
 <!-- MUX is required for playback of HLS-->
 <script defer src="../js/mux.js"></script>
