--- a/preconnect/videoJS_Campuspc.html
+++ b/preconnect/videoJS_Campuspc.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link href="https://res.cloudinary.com" rel="preconnect dns-prefetch" crossorigin>
+<link href="https://res.cloudinary.com" rel="preconnect" crossorigin>
 <script src="../js/video.min.js"></script>
 
 <link href="../js/video-js.min.css" rel="stylesheet">
