--- a/altWidth/YT360.html
+++ b/altWidth/YT360.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<iframe width="360" height="203"" src="https://www.youtube.com/embed/b8zWe5HlW8Y?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="360" height="203"" src="https://www.youtube.com/embed/b8zWe5HlW8Y?autoplay=1&mute=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 </body>
